[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/HitboxEnemy.gd" type="Script" id=1]

[node name="HitboxEnemy" type="Area2D" groups=[
"hitbox_enemy",
]]
collision_layer = 4
collision_mask = 16
script = ExtResource( 1 )

[node name="TimerAvoidDuplicate" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": ".3"
}

[node name="TimerContinuousDamage" type="Timer" parent="."]
wait_time = 0.4

[connection signal="area_entered" from="." to="." method="_on_HitboxEnemy_area_body_entered" flags=3]
[connection signal="area_exited" from="." to="." method="_on_HitboxEnemy_area_exited" flags=3]
[connection signal="timeout" from="TimerContinuousDamage" to="." method="_on_TimerContinuousDamage_timeout"]
